Fixed white space issue on login page, finished search bar

--- a/src/_App.scss
+++ b/src/_App.scss
@@ -1,12 +1,16 @@
 
-@media (max-width: 550px) {
-.mainContent {
-    transform: translateY(-152px);
-    transition: all .5s;
+@media (max-width: 700px) {
+    .mainContent {
+        transform: translateY(-152px);
+        transition: all .5s;
 
-}
+    }
 
-.slideDown {
-    transform: translateY(0px);
-}
+    .slideDown {
+        transform: translateY(0px);
+    }
+
+    .footer {
+        margin-top: -152px;
+    }
 }
