--- a/src/components/Nav/_nav.scss
+++ b/src/components/Nav/_nav.scss
@@ -82,6 +82,10 @@
           margin-left: 8px;
       }
 
+      &__text {
+        width: 100%;
+      }
+
       &__name {
           font-size: 1.6rem;
           color: #3F3F3F;
@@ -184,13 +188,7 @@
   }
 }
 
-@media (max-width: 580px) {
-  .navbar-right {
-    width: 90%;
-  }
-}
-
-@media (max-width: 550px) {
+@media (max-width: 700px) {
   .navbar-content {
     justify-content: space-between;
     align-items: center;
@@ -232,6 +230,23 @@
     font-size: 1.5rem;
   }
 }
+
+@media (max-width: 580px) {
+  .navbar-right {
+    width: 90%;
+  }
+}
+
+@media (max-width: 525px) {
+  .navbar-input-wrapper {
+    width: 75%;
+  }
+
+  .navbar-searched__text {
+    width: 72%;
+  }
+}
+
 
 .bar1,
 .bar2,
